[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/PlayerBase/CutoutPlayerBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/HurtBox/HurtBoxArea2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UIUnit/UIUnit.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/UIHealthBar/UITimedHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/UIHealthBar/UIHealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/SelectableArea2D/SelectableArea2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/PlayerBase/PlayerBase.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 32 )

[node name="PlayerBase" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprites" parent="." instance=ExtResource( 1 )]

[node name="HurtBoxArea2D" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxArea2D"]
shape = SubResource( 1 )

[node name="SelectableArea2D" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SelectableArea2D"]
shape = SubResource( 1 )

[node name="Interface" parent="." instance=ExtResource( 3 )]

[node name="HealthBar" parent="Interface" instance=ExtResource( 5 )]
margin_left = -92.0
margin_top = -72.0
margin_right = 80.0
margin_bottom = -54.0

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -92.0
margin_top = -72.0
margin_right = 100.0
margin_bottom = -54.0

[connection signal="hit_landed" from="HurtBoxArea2D" to="." method="_on_HurtBoxArea2D_hit_landed"]
[connection signal="selection_changed" from="SelectableArea2D" to="." method="_on_SelectableArea2D_selection_changed"]
